--- a/DWeb2019/TP1/Iguana.html
+++ b/DWeb2019/TP1/Iguana.html
@@ -47,7 +47,7 @@
         <hr/>
         <div style="color:#ffff">
             <!--  INTRODUÇÃO -->
-            <h2 style="font-family:arial;"><a name="1">Introdução</a></h2>
+            <h2 style="font-family:arial;" id="1">Introdução</a></h2>
             <p style="font-family:arial;">
             
             <p> A iguana é um género de réptil da família Iguanidae. As espécies deste género occorem em regiões tropicais 
@@ -60,7 +60,7 @@
             </p>
             <hr/>
             <!-- ESPÉCIES -->
-            <h2 style="font-family:arial;"><a name="2">Espécies</a></h2>
+            <h2 style="font-family:arial;" id="2">Espécies</a></h2>
             <p style="font-family:arial;">
               <p> A família Iguanidae possuí mais de 35 espécies. Porém, dentro da família Iguanidae há apenas duas espécies do gênero Iguana:
                 <ul>
@@ -72,7 +72,7 @@
               </p>
             <hr/>
             <!--ALIMENTAÇÃO-->
-            <h2 style="font-family:arial;"><a name="3">Alimentação</a></h2>
+            <h2 style="font-family:arial;" id = "3">Alimentação</a></h2>
             <p style="font-family:arial;">
               <p>
                   Iguanas são totalmente herbívoros, geralmente se alimentam de folhas, flores e frutos das árvores em que habitam. 
@@ -82,7 +82,7 @@
               </p>
             <hr/>
              <!-- CLASSIFICAÇÃO CIENTÍFICA -->
-             <h2 style="font-family:arial;"><a name="4">Classificação Científica</a></h2>
+             <h2 style="font-family:arial;" id="4">Classificação Científica</a></h2>
              <p style="font-family:arial;">
                 <table style="color:#ffff ; border: 1px solid #ffff;text-align: center; width: 50%">
                     <tr>
